# taskroot

./: .env  .env.example  .git-blame-ignore-revs  .gitignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  README.md  bash.exe.stackdump  bunfig.toml  bunfig.toml.bak  dev.bat  do.html  dom-debug.html  index.html  lint_output.txt  log.txt  main.js  oxlint_report.json  oxlint_report3.json  package-lock.json  package.json  plan.html  plan.txt  pyinstaller_entry.py  pyproject.toml  refactor-fix.ts  refactor-manual.cjs  refactor.ts  rest.html  run-hidden.vbs  run-prod.vbs  split_css.py  taskroot.spec  test.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest-setup.ts
Taskroot/: main.js  package-lock.json  package.json
dist-electron/: main.js  preload.cjs  preload.js  preload.mjs
electron/: main.ts  preload.cts  preload.ts  tsconfig.json
functions/: index.js  package.json
prototype/: day-column.html
scripts/: build.vbs  dev-runner.js  run-hidden.vbs  run-prod.vbs  start-offline.vbs  start-online.vbs
specs/: stuff.txt
src/: App.tsx  AuthContext.tsx  DoView.tsx  PlanView.tsx  RestView.tsx  app.jsx  collapsible.tsx  data.jsx  data.tsx  day-cal.jsx  day-cal.tsx  distraction-log.jsx  distraction-log.tsx  firebase.ts  global.css  global.d.ts  index.css  kanban.tsx  main.tsx  month-cal.jsx  month-cal.tsx  rest-app.jsx  scratch_test.ts  shell.jsx  shell.tsx  stopwatch.jsx  stopwatch.tsx  store.tsx  task-list.jsx  task-list.tsx  tips-notes.tsx  tweaks-panel.tsx  useGoogleCalendarSync.tsx
tests/: test_api.py  test_app.py  test_day.py  test_db.py  test_models.py  (+4 more)
(+238 files in other folders)
