[project]
name = "taskroot"
version = "0.1.0"
description = "Opinionated single-user task management system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pywebview>=5.0",
    "pystray>=0.19",
    "pillow>=10.0",
    "rapidfuzz>=3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskroot"]

[tool.hatch.build.targets.wheel.force-include]
"src/taskroot/data" = "taskroot/data"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ty>=0.0.1a1",
    "pyinstaller>=6.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
